--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,14 @@
     margin-top: 90px;
     width: 100%;
     float: left;
+    text-align:center;
+    transition: transform .1s;
+}
+.casellaInfo:hover{
+    transform: scale(1.05);
+}
+#immagineInfo {
+    height:100px;
 }
 p {
     font-family: Arial, Helvetica, sans-serif;
