--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,92 @@
 #barraSopra {
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    width: 100%;
-    max-height: fit-content;
-    background-color: rgb(241, 194, 64);
-    box-shadow: 0px 37px 39px 22px rgba(0,0,0,0.08);
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  width: 100%;
+  max-height: fit-content;
+  background-color: rgb(241, 194, 64);
+  box-shadow: 0px 37px 39px 22px rgba(0, 0, 0, 0.08);
 } /* rgb(172, 231, 76) COLOR FOGLIA AUTUNNO 1 
   rgb(146, 231, 76) COLOR FOGLIA AUTUNNO 2*/
 #barraSotto {
-    position:absolute;
-    left: 0px;
-    right: 0px;
-    bottom:0px;
-    width: 100%;
-    max-height: 100px;
-    min-height: 100px;
-    background-color: rgb(241, 194, 64);
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  max-height: 100px;
+  min-height: 100px;
+  background-color: rgb(241, 194, 64);
 }
-.pulsante:hover{
-    background-color:rgba(255, 219, 119, 0.753);
+.pulsante:hover {
+  background-color: rgba(255, 219, 119, 0.753);
 }
 .pulsante {
-    float: left;
-    position: relative;
-    height: auto;
-    width: 250px;
-    text-align: center;
+  float: left;
+  position: relative;
+  height: auto;
+  width: 250px;
+  text-align: center;
 }
 .casellaTesto {
-    background-color: rgb(255, 220, 155);
-    height: fit-content;
-    margin-top: 90px;
-    width: 100%;
+  background-color: rgb(255, 220, 155);
+  height: fit-content;
+  margin-top: 90px;
+  width: 100%;
 }
 .casellaInfo {
-    background-color: rgb(255, 220, 155);
-    height: 250px;
-    max-width: 500px;
-    margin-left: 20px;
-    margin-top: 90px;
-    width: 100%;
-    float: left;
-    text-align:center;
-    transition: transform .1s;
+  background-color: rgb(255, 220, 155);
+  height: 250px;
+  max-width: 500px;
+  margin-left: 20px;
+  margin-top: 90px;
+  width: 100%;
+  float: left;
+  text-align: center;
+  transition: transform 0.1s;
 }
-.casellaInfo:hover{
-    transform: scale(1.05);
+.casellaInfo:hover {
+  transform: scale(1.05);
 }
 #immagineInfo {
-    height:100px;
+  height: 100px;
 }
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: larger;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
 }
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .boxArticoli {
-    background-color: rgb(255, 220, 155);
-    max-height: 600px;
-    min-height: 600px;
-    min-width: 300px;
-    max-width: 300px;
-    margin-left: 55px;
-    margin-top: 105px;
-    margin-bottom: 10px;
-    transition: transform .1s;
-    float:left;
-    text-align: center;
+  background-color: rgb(255, 220, 155);
+  max-height: 600px;
+  min-height: 600px;
+  min-width: 300px;
+  max-width: 300px;
+  margin-left: 55px;
+  margin-top: 105px;
+  margin-bottom: 10px;
+  transition: transform 0.1s;
+  float: left;
+  text-align: center;
 }
 .boxArticoli:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 a {
-    color:black;
-    text-decoration:none;
+  color: black;
+  text-decoration: none;
 }
 #immagine {
-    float: right;
-    position: relative;
-    height: 70px;
-    width: 70px;
-    margin-top: 5px;
-    margin-right: 5px;
+  float: right;
+  position: relative;
+  height: 70px;
+  width: 70px;
+  margin-top: 5px;
+  margin-right: 5px;
 }
 body {
-    background-color: rgb(255, 241, 218);
+  background-color: rgb(255, 241, 218);
 }
