--- a/css/articolojava4.css
+++ b/css/articolojava4.css
@@ -39,4 +39,18 @@
        display: flex;
        float: left;
    }
-   
+   #boxColore {
+        background-color: white;
+        margin:2px;
+        width: 200px;
+        min-width: 200px;
+        height: 200px;
+        min-height: 200px;
+        padding:2px;
+        position:relative;
+        display: flex;
+        float: right;
+   }
+    .bottone {
+        border-width: 0px;
+   }
